update workflow again

--- a/.github/workflows/proj1.yml
+++ b/.github/workflows/proj1.yml
@@ -14,15 +14,18 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: make build
-      run: cd proj/proj1 |
+      run: |
+        cd proj/proj1
         make build
     - name: make compile
-      run: cd proj/proj1 |
-        make build |
+      run: |
+        cd proj/proj1
+        make build
         make compile
     - name: make run
-      run: cd proj/proj1 |
-        make build |
-        make compile |
+      run: |
+        cd proj/proj1
+        make build
+        make compile
         make run
 
