--- a/proj/proj1/Makefile
+++ b/proj/proj1/Makefile
@@ -109,9 +109,7 @@ ${OUTPUT_DIR}%.new.c: ${INPUT_DIR}%.adap ${INPUT_DIR}%.adap.h ${COMP_FILES:%=${C
 # COMP_FILES are the class names, the compiler files
 build: ${COMP_FILES:%=${COMP_CLASS_DIR}%.class}
 	@echo build target is going
-	@mkdir inputProgramDir
-	@mkdir outputProgramDir
-	@mkdir cfgOutputDir
+	@mkdir -p ${OUTPUT_DIR} ${COMP_CLASS_DIR} ${CFG_OUTPUT_DIR}
 
 #this $ seems to go before the build
 
@@ -125,7 +123,7 @@ show:
 	@cat ${INST_COUNT}
 
 clean:
-	${RM} ${RM_FLAGS} ${OUTPUT_DIR}*
-	${RM} ${RM_FLAGS} ${COMP_CLASS_DIR}*
-	${RM} ${RM_FLAGS} ${CFG_OUTPUT_DIR}*
+	${RM} ${RM_FLAGS} ${OUTPUT_DIR}
+	${RM} ${RM_FLAGS} ${COMP_CLASS_DIR}
+	${RM} ${RM_FLAGS} ${CFG_OUTPUT_DIR}
 
