--- a/.github/workflows/proj1.yml
+++ b/.github/workflows/proj1.yml
@@ -1,13 +1,15 @@
-name: proj1
+name: Project 1
 
 on:
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
-
+    push:
+      branches: [ main ]
+    pull_request:
+      branches: [ main ]
+    schedule:
+      # Schedule to run at 00:00 UTC on the 1st of every month
+      - cron: '0 0 1 * *'
 jobs:
-  build:
+  build-and-run:
 
     runs-on: ubuntu-latest
 
